Changelog for UCDPloneSkin

UCDPloneSkin 2.0 - Released - Apr, 19 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - reworded favicon help
    - fixed left nav bug... current item now honors excludeFromNav property
    - current left nav item now shows work flow color, i.e. red for private

UCDPloneSkin 2.0rc2 - Released - Apr, 17 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed a bug in the installer that prevented the new portlets from
      being set in left_slots

UCDPloneSkin 2.0rc1 - Released - Apr, 16 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - quicklink url can now have ${portal_url} variable, search example does
    - adjusted spacing around department name header to allow no padding on 
      logo image
    - removed <a> underline from events (.listing a)
    - added configlet option for favicon

UCDPloneSkin 2.0 in progress - Released - Apr, 14 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - option for two rows of portal_tabs or one row of blue portal_tabs now
      works with automatic tab generation turned off (i.e. portal_actions)

UCDPloneSkin 2.0 in progress - Released - Apr, 12 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - removed icon option from new left nav, didn't work with IE
    - Adjusted portal tabs spacing for IE and FF/Win, correctly this time

UCDPloneSkin 2.0 in progress - Released - Apr, 11 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - removed border in admin left nav
    - deleted getSections.py as it isn't needed with the new left nav
    - current left nav item is now bold

UCDPloneSkin 2.0 in progress - Released - Apr, 10 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - New left nav works
      - Added configlet option for left nav icons

UCDPloneSkin 2.0 in progress - Released - Apr, 03 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Continued stylizing new left nav
    - Adjusted portal tabs spacing
